most important things

--- a/index.html
+++ b/index.html
@@ -1,9 +1,54 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Keyur Joshi</title>
-</head>
-<body>
-Hello, World!
-</body>
+
+  <head>
+    <title>Keyur Joshi</title>
+    <style>
+      div {
+        font-family:arial;
+        font-size:large;
+      }
+      a {
+        text-decoration:none;
+        color:blue;
+      }
+      #sidebar {
+        width:15%;
+        height:100vh;
+        float:left;
+        padding:5% 2.5% 0% 5%;
+        background-color:ivory;
+      }
+      #content {
+        width:70%;
+        height:100vh;
+        float:right;
+        padding:5% 5% 0% 2.5%;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="sidebar">
+      <h1>Keyur Joshi</h1>
+      <a href="https://cs.illinois.edu/">University of Illinois at Urbana&#8209;Champaign</a>
+      <h3>Address</h3>
+      Room 3107, <br>
+      201 N Goodwin Ave, <br>
+      Urbana, IL 61801 USA
+      <h3>Email</h3>
+      kpjoshi2[at]illinois.edu
+    </div>
+    <div id="content">
+      <h1>About Me</h1>
+      I'm a PhD student in the <a href="https://cs.illinois.edu/">Department of Computer Science at the University of Illinois at Urbana&#8209;Champaign</a>.
+      My advisor is <a href="http://misailo.web.engr.illinois.edu/">Professor Sasa Misailovic</a>.
+      I graduated from the <a href="https://www.iith.ac.in/">Indian Institute of Technology Hyderabad</a> in 2017.
+      <h1>Publications</h1>
+      <ul>
+      <li> <b>Algorithmic Profiling for Randomized Approximate Programs</b> </br>
+           <u>Keyur Joshi</u>, Vimuth Fernando, Sasa Misailovic </br>
+           <i>41st ACM/IEEE International Conference on Software Engineering (ICSE 2019)</i>
+      </ul>
+    </div>
+  </body>
 </html>
