added profile pic

--- a/index.html
+++ b/index.html
@@ -16,19 +16,25 @@
         width:15%;
         height:100vh;
         float:left;
-        padding:5% 2.5% 0% 5%;
+        padding:2.5% 2.5% 0% 2.5%;
         background-color:ivory;
       }
       #content {
-        width:70%;
+        width:75%;
         height:100vh;
         float:right;
-        padding:5% 5% 0% 2.5%;
+        padding:2.5% 2.5% 0% 2.5%;
+      }
+      #profilepic {
+        max-width:100%;
+        max-height:auto;
+        object-fit:contain;
       }
     </style>
   </head>
   <body>
     <div id="sidebar">
+      <img src="portrait.jpg" alt="Photograph" id="profilepic">
       <h1>Keyur Joshi</h1>
       <a href="https://cs.illinois.edu/">University of Illinois at Urbana&#8209;Champaign</a>
       <h3>Address</h3>
