--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
       I graduated from the <a href="https://www.iith.ac.in/">Indian Institute of Technology Hyderabad</a> in 2017.
       <h1>Publications</h1>
       <ul>
-      <li> <b>Algorithmic Profiling for Randomized Approximate Programs</b> </br>
-           <u>Keyur Joshi</u>, Vimuth Fernando, Sasa Misailovic </br>
-           <i>41st ACM/IEEE International Conference on Software Engineering (ICSE 2019)</i>
+      <li> <b>Statistical Algorithmic Profiling for Randomized Approximate Programs</b> <br>
+           <u>Keyur Joshi</u>, Vimuth Fernando, Sasa Misailovic <br>
+           <i>41st ACM/IEEE International Conference on Software Engineering (ICSE 2019)</i> <br>
+           <a href="papers/ICSE2019.pdf">Full Text</a> | <a href="presentations/ICSE2019.pdf">Slides</a>
       </ul>
     </div>
   </body>
