add parallely basic info

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         max-height:auto;
         object-fit:contain;
       }
+      li{
+        margin: 25px 0;
+      }
     </style>
   </head>
   <body>
@@ -55,6 +58,9 @@
            <u>Keyur Joshi</u>, Vimuth Fernando, Sasa Misailovic <br>
            <i>41st ACM/IEEE International Conference on Software Engineering (ICSE 2019)</i> <br>
            <a href="papers/ICSE2019.pdf">Full Text</a> | <a href="presentations/ICSE2019.pdf">Slides</a>
+      <li> <b>Verifying Safety and Accuracy of Approximate Parallel Programs via Canonical Sequentialization</b> <br>
+           Vimuth Fernando, <u>Keyur Joshi</u>, Sasa Misailovic <br>
+           <i>SPLASH 2019 OOPSLA</i> <br>
       </ul>
     </div>
   </body>
