--- a/index.html
+++ b/index.html
@@ -54,14 +54,19 @@
       I graduated from the <a href="https://www.iith.ac.in/">Indian Institute of Technology Hyderabad</a> in 2017.
       <h1>Publications</h1>
       <ul>
-      <li> <b>Statistical Algorithmic Profiling for Randomized Approximate Programs</b> <br>
-           <u>Keyur Joshi</u>, Vimuth Fernando, Sasa Misailovic <br>
-           <i>41st ACM/IEEE International Conference on Software Engineering (ICSE 2019)</i> <br>
-           <a href="papers/ICSE2019.pdf">Full Text</a> | <a href="presentations/ICSE2019.pdf">Slides</a>
       <li> <b>Verifying Safety and Accuracy of Approximate Parallel Programs via Canonical Sequentialization</b> <br>
            Vimuth Fernando, <u>Keyur Joshi</u>, Sasa Misailovic <br>
            <i>SPLASH 2019 OOPSLA</i> <br>
+      <li> <b>Identifying Optimal Parameters for Randomized Approximate Algorithms</b> <br>
+           Vimuth Fernando, <u>Keyur Joshi</u>, Darko Marinov, Sasa Misailovic <br>
+           <i>Workshop on Approximate Computing Across the Stack (WAX 2019) (Co-located with PLDI 2019)</i> <br>
+           <a href="papers/WAX2019.pdf">Full Text</a>
+      <li> <b>Statistical Algorithmic Profiling for Randomized Approximate Programs</b> <br>
+           <u>Keyur Joshi</u>, Vimuth Fernando, Sasa Misailovic <br>
+           <i>41st ACM/IEEE International Conference on Software Engineering (ICSE 2019)</i> <br>
+           <a href="papers/ICSE2019.pdf">Full Text</a> | <a href="presentations/ICSE2019.pdf">Slides</a> <br>
       </ul>
     </div>
   </body>
 </html>
+
