--- a/index.html
+++ b/index.html
@@ -1,58 +1,60 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <title>Keyur Joshi</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <style>
+  body {
+    padding-top: 65px;
+  }
+  </style>
+</head>
+<body>
 
-  <head>
-    <title>Keyur Joshi</title>
-    <style>
-      div {
-        font-family:arial;
-        font-size:large;
-      }
-      a {
-        text-decoration:none;
-        color:blue;
-      }
-      #sidebar {
-        width:15%;
-        height:100vh;
-        float:left;
-        padding:2.5% 2.5% 0% 2.5%;
-        background-color:ivory;
-      }
-      #content {
-        width:75%;
-        height:100vh;
-        float:right;
-        padding:2.5% 2.5% 0% 2.5%;
-      }
-      #profilepic {
-        max-width:100%;
-        max-height:auto;
-        object-fit:contain;
-      }
-      li{
-        margin: 25px 0;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="sidebar">
-      <img src="portrait.jpg" alt="Photograph" id="profilepic">
+<nav class="navbar navbar-expand-sm bg-info navbar-dark fixed-top">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#aboutme">About Me</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#publications">Publications</a>
+      </li>
+    </ul>
+  </div>  
+</nav>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-4">
+      <img class="img-fluid" src="images/portrait.jpg" alt="Keyur Joshi">
       <h1>Keyur Joshi</h1>
       <a href="https://cs.illinois.edu/">University of Illinois at Urbana&#8209;Champaign</a>
+      <hr>
       <h3>Address</h3>
       Room 3107, <br>
       201 N Goodwin Ave, <br>
       Urbana, IL 61801 USA
+      <hr>
       <h3>Email</h3>
       kpjoshi2[at]illinois.edu
+      <hr class="d-sm-none">
     </div>
-    <div id="content">
-      <h1>About Me</h1>
+    <div class="col-sm-8">
+      <h1 id="aboutme">About Me</h1>
       I'm a PhD student in the <a href="https://cs.illinois.edu/">Department of Computer Science at the University of Illinois at Urbana&#8209;Champaign</a>.
       My advisor is <a href="http://misailo.web.engr.illinois.edu/">Professor Sasa Misailovic</a>.
       I graduated from the <a href="https://www.iith.ac.in/">Indian Institute of Technology Hyderabad</a> in 2017.
-      <h1>Publications</h1>
+      <hr>
+      <h1 id="publications">Publications</h1>
       <ul>
       <li> <b>Verifying Safety and Accuracy of Approximate Parallel Programs via Canonical Sequentialization</b> <br>
            Vimuth Fernando, <u>Keyur Joshi</u>, Sasa Misailovic <br>
@@ -67,6 +69,9 @@
            <a href="papers/ICSE2019.pdf">Full Text</a> | <a href="presentations/ICSE2019.pdf">Slides</a> <br>
       </ul>
     </div>
-  </body>
+  </div>
+</div>
+
+</body>
 </html>
 
