--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
       <li> <b>Verifying Safety and Accuracy of Approximate Parallel Programs via Canonical Sequentialization</b> <br>
            Vimuth Fernando, <u>Keyur Joshi</u>, Sasa Misailovic <br>
            <i>SPLASH 2019 OOPSLA</i> <br>
+      <li> <b>ApproxHPVM: A Portable Compiler IR for Accuracy-Aware Optimizations</b> <br>
+           Hashim Sharif, Prakalp Srivastava, Muhammad Huzaifa, Maria Kotsifakou, <u>Keyur Joshi</u>, Yasmin Sarita, Nathan Zhao, Vikram S. Adve, Sasa Misailovic, Sarita Adve <br>
+           <i>SPLASH 2019 OOPSLA</i> <br>
       <li> <b>Identifying Optimal Parameters for Randomized Approximate Algorithms</b> <br>
            Vimuth Fernando, <u>Keyur Joshi</u>, Darko Marinov, Sasa Misailovic <br>
            <i>Workshop on Approximate Computing Across the Stack (WAX 2019) (Co-located with PLDI 2019)</i> <br>
