--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
       <li> <b>Verifying Safety and Accuracy of Approximate Parallel Programs via Canonical Sequentialization</b> <br>
            Vimuth Fernando, <u>Keyur Joshi</u>, Sasa Misailovic <br>
            <i>SPLASH 2019 OOPSLA</i> <br>
+           <a href="papers/OOPSLA2019.pdf">Full Text</a>
       <li> <b>ApproxHPVM: A Portable Compiler IR for Accuracy-Aware Optimizations</b> <br>
            Hashim Sharif, Prakalp Srivastava, Muhammad Huzaifa, Maria Kotsifakou, <u>Keyur Joshi</u>, Yasmin Sarita, Nathan Zhao, Vikram S. Adve, Sasa Misailovic, Sarita Adve <br>
            <i>SPLASH 2019 OOPSLA</i> <br>
