--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
       <ul>
       <li> <b>Verifying Safety and Accuracy of Approximate Parallel Programs via Canonical Sequentialization</b> <br>
            Vimuth Fernando, <u>Keyur Joshi</u>, Sasa Misailovic <br>
-           <i>SPLASH 2019 OOPSLA</i> <br>
-           <a href="papers/OOPSLA2019A.pdf">Full Text</a>
+           <i>34th ACM SIGPLAN Conference on Object-Oriented Programming, Systems, Languages and Applications (OOPSLA/SPLASH 2019)</i> <br>
+           <a href="papers/OOPSLA2019A.pdf">Full Text</a> | <a href="papers/OOPSLA2019A_appendix.pdf">Appendix</a> <br>
       <li> <b>ApproxHPVM: A Portable Compiler IR for Accuracy-Aware Optimizations</b> <br>
            Hashim Sharif, Prakalp Srivastava, Muhammad Huzaifa, Maria Kotsifakou, <u>Keyur Joshi</u>, Yasmin Sarita, Nathan Zhao, Vikram S. Adve, Sasa Misailovic, Sarita Adve <br>
-           <i>SPLASH 2019 OOPSLA</i> <br>
-           <a href="papers/OOPSLA2019B.pdf">Full Text</a>
+           <i>34th ACM SIGPLAN Conference on Object-Oriented Programming, Systems, Languages and Applications (OOPSLA/SPLASH 2019)</i> <br>
+           <a href="papers/OOPSLA2019B.pdf">Full Text</a> <br>
       <li> <b>Identifying Optimal Parameters for Randomized Approximate Algorithms</b> <br>
            Vimuth Fernando, <u>Keyur Joshi</u>, Darko Marinov, Sasa Misailovic <br>
            <i>Workshop on Approximate Computing Across the Stack (WAX 2019) (Co-located with PLDI 2019)</i> <br>
-           <a href="papers/WAX2019.pdf">Full Text</a>
+           <a href="papers/WAX2019.pdf">Full Text</a> | <a href="presentations/WAX2019.pdf">Slides</a> <br>
       <li> <b>Statistical Algorithmic Profiling for Randomized Approximate Programs</b> <br>
            <u>Keyur Joshi</u>, Vimuth Fernando, Sasa Misailovic <br>
            <i>41st ACM/IEEE International Conference on Software Engineering (ICSE 2019)</i> <br>
