add parallely presentation

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <li> <b>Verifying Safety and Accuracy of Approximate Parallel Programs via Canonical Sequentialization</b> <br>
            Vimuth Fernando, <u>Keyur Joshi</u>, Sasa Misailovic <br>
            <i>34th ACM SIGPLAN Conference on Object-Oriented Programming, Systems, Languages and Applications (OOPSLA/SPLASH 2019)</i> <br>
-           <a href="papers/OOPSLA2019A.pdf">Full Text</a> | <a href="papers/OOPSLA2019A_appendix.pdf">Appendix</a> <br>
+           <a href="papers/OOPSLA2019A.pdf">Full Text</a> | <a href="papers/OOPSLA2019A_appendix.pdf">Appendix</a> | <a href="presentations/OOPSLA2019A.pdf">Slides</a> <br>
       <li> <b>ApproxHPVM: A Portable Compiler IR for Accuracy-Aware Optimizations</b> <br>
            Hashim Sharif, Prakalp Srivastava, Muhammad Huzaifa, Maria Kotsifakou, <u>Keyur Joshi</u>, Yasmin Sarita, Nathan Zhao, Vikram S. Adve, Sasa Misailovic, Sarita Adve <br>
            <i>34th ACM SIGPLAN Conference on Object-Oriented Programming, Systems, Languages and Applications (OOPSLA/SPLASH 2019)</i> <br>
