--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       Urbana, IL 61801 USA
       <hr>
       <h3>Email</h3>
-      kpjoshi2[at]illinois.edu
+      <a href="mailto:kpjoshi2@illinois.edu">kpjoshi2@illinois.edu</a>
       <hr class="d-sm-none">
     </div>
     <div class="col-sm-8">
@@ -53,6 +53,7 @@
       I'm a PhD student in the <a href="https://cs.illinois.edu/">Department of Computer Science at the University of Illinois at Urbana&#8209;Champaign</a>.
       My advisor is <a href="http://misailo.web.engr.illinois.edu/">Professor Sasa Misailovic</a>.
       I graduated from the <a href="https://www.iith.ac.in/">Indian Institute of Technology Hyderabad</a> in 2017.
+      You can find my resume <a href="misc/resume.pdf">here</a>.
       <hr>
       <h1 id="publications">Publications</h1>
       <h2>2020</h2>
