add cgo presentation

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <li> <b>Aloe: Verifying Reliability of Approximate Programs in the Presence of Recovery Mechanisms</b> <br>
            <u>Keyur Joshi</u>, Vimuth Fernando, Sasa Misailovic <br>
            <i>IEEE/ACM International Symposium on Code Generation and Optimization (CGO 2020)</i> <br>
-           <a href="papers/CGO2020.pdf">Full Text</a> | <a href="papers/CGO2020_appendix.pdf">Appendix</a>
+           <a href="papers/CGO2020.pdf">Full Text</a> | <a href="papers/CGO2020_appendix.pdf">Appendix</a> | <a href="presentations/CGO2020.pdf">Slides</a> <br>
       </ul>
       <h2>2019</h2>
       <ul>
