add PPOPP paper

--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
       You can find my resume <a href="misc/resume.pdf">here</a>.
       <hr>
       <h1 id="publications">Publications</h1>
+      <h2>2021</h2>
+      <ul>
+      <li> <b>ApproxTuner: A Compiler and Runtime System for Adaptive Approximations</b> <br>
+           Hashim Sharif, Maria Kotsifakou, Yifan Zhao, Akash Kothari, Ben Schreiber, Elizabeth Wang, Yasmin Sarita, Nathan Zhao, <u>Keyur Joshi</u>, Vikram Adve, Sasa Misailovic, Sarita Adve <br>
+           <i>ACM SIGPLAN Symposium on Principles and Practice of Parallel Programming (PPOPP 2021)</i> <br>
+      </ul>
       <h2>2020</h2>
       <ul>
       <li> <b>Aloe: Verifying Reliability of Approximate Programs in the Presence of Recovery Mechanisms</b> <br>
@@ -88,4 +94,3 @@
 
 </body>
 </html>
-
