add PPOPP paper; add Diamont

--- a/index.html
+++ b/index.html
@@ -58,9 +58,14 @@
       <h1 id="publications">Publications</h1>
       <h2>2021</h2>
       <ul>
+      <li> <b>Diamont: Dynamic Monitoring of Uncertainty for Distributed Asynchronous Programs</b> <br>
+           Vimuth Fernando, <u>Keyur Joshi</u>, Jacob Laurel, Sasa Misailovic <br>
+           <i>International Conference on Runtime Verification (RV 2021)</i> <br>
+           <a href="papers/RV2021.pdf">Full Text</a>
       <li> <b>ApproxTuner: A Compiler and Runtime System for Adaptive Approximations</b> <br>
            Hashim Sharif, Maria Kotsifakou, Yifan Zhao, Akash Kothari, Ben Schreiber, Elizabeth Wang, Yasmin Sarita, Nathan Zhao, <u>Keyur Joshi</u>, Vikram Adve, Sasa Misailovic, Sarita Adve <br>
            <i>ACM SIGPLAN Symposium on Principles and Practice of Parallel Programming (PPOPP 2021)</i> <br>
+           <a href="papers/PPOPP2021.pdf">Full Text</a>
       </ul>
       <h2>2020</h2>
       <ul>
