add more Diamont links

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <li> <b>Diamont: Dynamic Monitoring of Uncertainty for Distributed Asynchronous Programs</b> <br>
            Vimuth Fernando, <u>Keyur Joshi</u>, Jacob Laurel, Sasa Misailovic <br>
            <i>International Conference on Runtime Verification (RV 2021)</i> <br>
-           <a href="papers/RV2021.pdf">Full Text</a>
+           <a href="papers/RV2021.pdf">Full Text</a> | <a href="papers/RV2021_appendix.pdf">Appendix</a> | <a href="https://www.youtube.com/watch?v=TJL6mSiss6E">Conference Talk (YouTube)</a>
       <li> <b>ApproxTuner: A Compiler and Runtime System for Adaptive Approximations</b> <br>
            Hashim Sharif, Maria Kotsifakou, Yifan Zhao, Akash Kothari, Ben Schreiber, Elizabeth Wang, Yasmin Sarita, Nathan Zhao, <u>Keyur Joshi</u>, Vikram Adve, Sasa Misailovic, Sarita Adve <br>
            <i>ACM SIGPLAN Symposium on Principles and Practice of Parallel Programming (PPOPP 2021)</i> <br>
