--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
       You can find my resume <a href="misc/resume.pdf">here</a>.
       <hr>
       <h1 id="publications">Publications</h1>
+      <h2>2022</h2>
+      <ul>
+      <li> <b>Verifying Controllers with Vision-based Perception Using Safe Approximate Abstractions</b> <br>
+           Chiao Hsieh, Yangge Li, Dawei Sun, <u>Keyur Joshi</u>, Sasa Misailovic, Sayan Mitra <br>
+           <i>Embedded Software (EMSOFT 2022)</i> <br>
+           <a href="papers/EMSOFT2022.pdf">Full Text with Appendix</a>
+      </ul>
       <h2>2021</h2>
       <ul>
       <li> <b>Diamont: Dynamic Monitoring of Uncertainty for Distributed Asynchronous Programs</b> <br>
