add info on research internship

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
     <div class="col-sm-8">
       <h1 id="aboutme">About Me</h1>
       I'm a PhD student in the <a href="https://cs.illinois.edu/">Department of Computer Science at the University of Illinois at Urbana&#8209;Champaign</a>.
-      My advisor is <a href="http://misailo.web.engr.illinois.edu/">Professor Sasa Misailovic</a>.
+      My advisor is <a href="https://misailo.web.engr.illinois.edu/">Professor Sasa Misailovic</a>.
+      I was a research intern at Microsoft Research India under <a href="https://www.microsoft.com/en-us/research/people/rahsha/">Rahul Sharma</a>.
       I graduated from the <a href="https://www.iith.ac.in/">Indian Institute of Technology Hyderabad</a> in 2017.
       You can find my resume <a href="misc/resume.pdf">here</a>.
       <hr>
