add job seeking note

--- a/index.html
+++ b/index.html
@@ -50,11 +50,14 @@
     </div>
     <div class="col-sm-8">
       <h1 id="aboutme">About Me</h1>
-      I'm a PhD student in the <a href="https://cs.illinois.edu/">Department of Computer Science at the University of Illinois at Urbana&#8209;Champaign</a>.
+      <b>I am currently seeking software engineering / applied scientist and related positions in industry.
+      You can find my resume <a href="misc/resume.pdf">here</a>.
+      </b>
+      <br><br>
+      I am a PhD student in the <a href="https://cs.illinois.edu/">Department of Computer Science at the University of Illinois at Urbana&#8209;Champaign</a>.
       My advisor is <a href="https://misailo.web.engr.illinois.edu/">Professor Sasa Misailovic</a>.
       I was a research intern at Microsoft Research India under <a href="https://www.microsoft.com/en-us/research/people/rahsha/">Rahul Sharma</a>.
       I graduated from the <a href="https://www.iith.ac.in/">Indian Institute of Technology Hyderabad</a> in 2017.
-      You can find my resume <a href="misc/resume.pdf">here</a>.
       <hr>
       <h1 id="publications">Publications</h1>
       <h2>2022</h2>
