add ORCID + misc. changes

--- a/index.html
+++ b/index.html
@@ -35,17 +35,24 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-4">
-      <img class="img-fluid" src="images/portrait.jpg" alt="Keyur Joshi">
-      <h1>Keyur Joshi</h1>
-      <a href="https://cs.illinois.edu/">University of Illinois at Urbana&#8209;Champaign</a>
+      <center>
+        <img class="img-fluid" src="images/portrait.jpg" alt="Keyur Joshi">
+        <h1>Keyur Parag Joshi</h1>
+      </center>
+      <hr>
+      <a href="misc/resume.pdf"><h3>View Resume</h3></a>
       <hr>
       <h3>Address</h3>
       Room 3107, <br>
+      Thomas M. Siebel Center for Computer Science, <br>
       201 N Goodwin Ave, <br>
       Urbana, IL 61801 USA
       <hr>
       <h3>Email</h3>
       <a href="mailto:kpjoshi2@illinois.edu">kpjoshi2@illinois.edu</a>
+      <hr>
+      <h3>ORCID</h3>
+      <a href="https://orcid.org/0000-0002-5794-6257">0000-0002-5794-6257</a>
       <hr class="d-sm-none">
     </div>
     <div class="col-sm-8">
@@ -54,7 +61,7 @@
       You can find my resume <a href="misc/resume.pdf">here</a>.
       </b>
       <br><br>
-      I am a PhD student in the <a href="https://cs.illinois.edu/">Department of Computer Science at the University of Illinois at Urbana&#8209;Champaign</a>.
+      I am a PhD student in the <a href="https://cs.illinois.edu/">Department of Computer Science at the University of Illinois Urbana&#8209;Champaign</a>.
       My advisor is <a href="https://misailo.web.engr.illinois.edu/">Professor Sasa Misailovic</a>.
       I was a research intern at Microsoft Research India under <a href="https://www.microsoft.com/en-us/research/people/rahsha/">Rahul Sharma</a>.
       I graduated from the <a href="https://www.iith.ac.in/">Indian Institute of Technology Hyderabad</a> in 2017.
