--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
       I graduated from the <a href="https://www.iith.ac.in/">Indian Institute of Technology Hyderabad</a> in 2017.
       <hr>
       <h1 id="publications">Publications</h1>
+      <h2>2024</h2>
+      <ul>
+      <li> <b>Compositional Analysis of the Effects of Uncertainty on Computations</b> <br>
+           <u>Keyur Joshi</u> <br>
+           <i>PhD Dissertation</i> <br>
+           <a href="misc/dissertation.pdf">Full Text</a>
+      </ul>
       <h2>2022</h2>
       <ul>
       <li> <b>Verifying Controllers with Vision-based Perception Using Safe Approximate Abstractions</b> <br>
