add LinkedIn link

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
       <h3>Email</h3>
       <a href="mailto:kpjoshi2@illinois.edu">kpjoshi2@illinois.edu</a>
       <hr>
+      <h3>LinkedIn</h3>
+      <a href="https://www.linkedin.com/in/keyurpjoshi/">www.linkedin.com/in/keyurpjoshi/</a>
+      <hr>
       <h3>ORCID</h3>
       <a href="https://orcid.org/0000-0002-5794-6257">0000-0002-5794-6257</a>
       <hr class="d-sm-none">
