--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
     </div>
     <div class="col-sm-8">
       <h1 id="aboutme">About Me</h1>
-      <b>I am currently seeking software engineering / applied scientist and related positions in industry.
+      <b>I am currently seeking research engineer / applied scientist / software engineer and related positions in industry.
       You can find my resume <a href="misc/resume.pdf">here</a>.
       </b>
       <br><br>
-      I am a PhD student in the <a href="https://cs.illinois.edu/">Department of Computer Science at the University of Illinois Urbana&#8209;Champaign</a>.
-      My advisor is <a href="https://misailo.web.engr.illinois.edu/">Professor Sasa Misailovic</a>.
-      I was a research intern at Microsoft Research India under <a href="https://www.microsoft.com/en-us/research/people/rahsha/">Rahul Sharma</a>.
+      I recently completed my PhD at the <a href="https://cs.illinois.edu/">Department of Computer Science at the University of Illinois Urbana&#8209;Champaign</a>.
+      My advisor was <a href="https://misailo.web.engr.illinois.edu/">Associate Professor Sasa Misailovic</a>.
+      I was previously a research intern at Microsoft Research India working with <a href="https://www.microsoft.com/en-us/research/people/rahsha/">Rahul Sharma</a>.
       I graduated from the <a href="https://www.iith.ac.in/">Indian Institute of Technology Hyderabad</a> in 2017.
       <hr>
       <h1 id="publications">Publications</h1>
