add in submission preprints

--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
            <u>Keyur Joshi</u> <br>
            <i>PhD Dissertation</i> <br>
            <a href="misc/dissertation.pdf">Full Text</a>
+      <li> <b>FastFlip: Compositional Error Injection Analysis</b> <br>
+           <u>Keyur Joshi</u>, Rahul Singh, Tommaso Bassetto, Sarita Adve, Darko Marinov, Sasa Misailovic <br>
+           <i>In Submission</i> <br>
+           <a href="https://arxiv.org/abs/2403.13989">Preprint</a>
+      <li> <b>GAS: Generating Fast and Accurate Surrogate Models for Autonomous Vehicle Systems</b> <br>
+           <u>Keyur Joshi</u>, Chiao Hsieh, Sayan Mitra, Sasa Misailovic <br>
+           <i>In Submission</i> <br>
+           <a href="https://arxiv.org/abs/2208.02232">Preprint</a>
       </ul>
       <h2>2022</h2>
       <ul>
