--- a/index.html
+++ b/index.html
@@ -40,16 +40,15 @@
         <h1>Keyur Parag Joshi</h1>
       </center>
       <hr>
-      <a href="misc/resume.pdf"><h3>View Resume</h3></a>
+      <a href="misc/resume.pdf"><h3>Resume</h3></a>
       <hr>
       <h3>Address</h3>
-      Room 3107, <br>
-      Thomas M. Siebel Center for Computer Science, <br>
-      201 N Goodwin Ave, <br>
-      Urbana, IL 61801 USA
-      <hr>
+      Google Sunnyvale MP2, <br>
+      1175 Borregas Ave, <br>
+      Sunnyvale, CA 94089 USA
+      <!-- <hr>
       <h3>Email</h3>
-      <a href="mailto:kpjoshi2@illinois.edu">kpjoshi2@illinois.edu</a>
+      <a href="mailto:keyurj@google.com">keyurj@google.com</a> -->
       <hr>
       <h3>LinkedIn</h3>
       <a href="https://www.linkedin.com/in/keyurpjoshi/">www.linkedin.com/in/keyurpjoshi/</a>
@@ -60,11 +59,10 @@
     </div>
     <div class="col-sm-8">
       <h1 id="aboutme">About Me</h1>
-      <b>I am currently seeking research engineer / applied scientist / software engineer and related positions in industry.
-      You can find my resume <a href="misc/resume.pdf">here</a>.
-      </b>
+      I am a Software Engineer (L4) at Google.
+      My work focuses on evaluating the accuracy of AI agents when they perform multi-step tasks and use developer-defined functions and resources.
       <br><br>
-      I recently completed my PhD at the <a href="https://cs.illinois.edu/">Department of Computer Science at the University of Illinois Urbana&#8209;Champaign</a>.
+      I recently completed my PhD at the <a href="https://siebelschool.illinois.edu/">School of Computing and Data Science at the University of Illinois Urbana&#8209;Champaign</a>.
       My advisor was <a href="https://misailo.web.engr.illinois.edu/">Associate Professor Sasa Misailovic</a>.
       I was previously a research intern at Microsoft Research India working with <a href="https://www.microsoft.com/en-us/research/people/rahsha/">Rahul Sharma</a>.
       I graduated from the <a href="https://www.iith.ac.in/">Indian Institute of Technology Hyderabad</a> in 2017.
@@ -76,14 +74,14 @@
            <u>Keyur Joshi</u> <br>
            <i>PhD Dissertation</i> <br>
            <a href="misc/dissertation.pdf">Full Text</a>
-      <li> <b>FastFlip: Compositional Error Injection Analysis</b> <br>
-           <u>Keyur Joshi</u>, Rahul Singh, Tommaso Bassetto, Sarita Adve, Darko Marinov, Sasa Misailovic <br>
-           <i>In Submission</i> <br>
-           <a href="https://arxiv.org/abs/2403.13989">Preprint</a>
       <li> <b>GAS: Generating Fast and Accurate Surrogate Models for Autonomous Vehicle Systems</b> <br>
            <u>Keyur Joshi</u>, Chiao Hsieh, Sayan Mitra, Sasa Misailovic <br>
-           <i>In Submission</i> <br>
+           <i>International Symposium on Software Reliability Engineering (ISSRE 2024)</i> <br>
            <a href="https://arxiv.org/abs/2208.02232">Preprint</a>
+      <li> <b>FastFlip: Compositional Error Injection Analysis</b> <br>
+          <u>Keyur Joshi</u>, Rahul Singh, Tommaso Bassetto, Sarita Adve, Darko Marinov, Sasa Misailovic <br>
+          <i>In Submission</i> <br>
+          <a href="https://arxiv.org/abs/2403.13989">Preprint</a>
       </ul>
       <h2>2022</h2>
       <ul>
