update resume, GAS, and FastFlip papers

--- a/index.html
+++ b/index.html
@@ -62,12 +62,19 @@
       I am a Software Engineer (L4) at Google.
       My work focuses on evaluating the accuracy of AI agents when they perform multi-step tasks and use developer-defined functions and resources.
       <br><br>
-      I recently completed my PhD at the <a href="https://siebelschool.illinois.edu/">School of Computing and Data Science at the University of Illinois Urbana&#8209;Champaign</a>.
+      I completed my PhD at the <a href="https://siebelschool.illinois.edu/">School of Computing and Data Science at the University of Illinois Urbana&#8209;Champaign</a> in May 2024.
       My advisor was <a href="https://misailo.web.engr.illinois.edu/">Associate Professor Sasa Misailovic</a>.
       I was previously a research intern at Microsoft Research India working with <a href="https://www.microsoft.com/en-us/research/people/rahsha/">Rahul Sharma</a>.
       I graduated from the <a href="https://www.iith.ac.in/">Indian Institute of Technology Hyderabad</a> in 2017.
       <hr>
       <h1 id="publications">Publications</h1>
+      <h2>2025</h2>
+      <ul>
+      <li> <b>FastFlip: Compositional SDC Resiliency Analysis</b> <br>
+           <u>Keyur Joshi</u>, Rahul Singh, Tommaso Bassetto, Sarita Adve, Darko Marinov, Sasa Misailovic <br>
+           <i>International Symposium on Code Generation and Optimization (CGO 2025)</i> <br>
+           <a href="papers/CGO2025.pdf">Preprint</a>
+      </ul>
       <h2>2024</h2>
       <ul>
       <li> <b>Compositional Analysis of the Effects of Uncertainty on Computations</b> <br>
@@ -77,11 +84,7 @@
       <li> <b>GAS: Generating Fast and Accurate Surrogate Models for Autonomous Vehicle Systems</b> <br>
            <u>Keyur Joshi</u>, Chiao Hsieh, Sayan Mitra, Sasa Misailovic <br>
            <i>International Symposium on Software Reliability Engineering (ISSRE 2024)</i> <br>
-           <a href="https://arxiv.org/abs/2208.02232">Preprint</a>
-      <li> <b>FastFlip: Compositional Error Injection Analysis</b> <br>
-          <u>Keyur Joshi</u>, Rahul Singh, Tommaso Bassetto, Sarita Adve, Darko Marinov, Sasa Misailovic <br>
-          <i>In Submission</i> <br>
-          <a href="https://arxiv.org/abs/2403.13989">Preprint</a>
+           <a href="papers/ISSRE2024.pdf">Full Text</a> | <a href="papers/ISSRE2024_appendix.pdf">Appendix</a>
       </ul>
       <h2>2022</h2>
       <ul>
