--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-4">
-      <center>
+      <div style="text-align:center;">
         <img class="img-fluid" src="images/portrait.jpg" alt="Keyur Joshi">
         <h1>Keyur Parag Joshi</h1>
-      </center>
+      </div>
       <hr>
       <a href="misc/resume.pdf"><h3>Resume</h3></a>
       <hr>
@@ -46,9 +46,9 @@
       Google Sunnyvale MP2, <br>
       1175 Borregas Ave, <br>
       Sunnyvale, CA 94089 USA
-      <!-- <hr>
+      <hr>
       <h3>Email</h3>
-      <a href="mailto:keyurj@google.com">keyurj@google.com</a> -->
+      <a href="mailto:keyurj@google.com">keyurj@google.com</a>
       <hr>
       <h3>LinkedIn</h3>
       <a href="https://www.linkedin.com/in/keyurpjoshi/">www.linkedin.com/in/keyurpjoshi/</a>
@@ -60,7 +60,7 @@
     <div class="col-sm-8">
       <h1 id="aboutme">About Me</h1>
       I am a Software Engineer (L4) at Google.
-      My work focuses on evaluating the accuracy of AI agents when they perform multi-step tasks and use developer-defined functions and resources.
+      My work focuses on evaluating the accuracy of AI agents that perform complex tasks and use developer-defined functions and resources.
       <br><br>
       I completed my PhD at the <a href="https://siebelschool.illinois.edu/">School of Computing and Data Science at the University of Illinois Urbana&#8209;Champaign</a> in May 2024.
       My advisor was <a href="https://misailo.web.engr.illinois.edu/">Associate Professor Sasa Misailovic</a>.
@@ -73,7 +73,7 @@
       <li> <b>FastFlip: Compositional SDC Resiliency Analysis</b> <br>
            <u>Keyur Joshi</u>, Rahul Singh, Tommaso Bassetto, Sarita Adve, Darko Marinov, Sasa Misailovic <br>
            <i>International Symposium on Code Generation and Optimization (CGO 2025)</i> <br>
-           <a href="papers/CGO2025.pdf">Preprint</a>
+           <a href="papers/CGO2025.pdf">Full Text</a>
       </ul>
       <h2>2024</h2>
       <ul>
