update description and resume

--- a/index.html
+++ b/index.html
@@ -37,15 +37,14 @@
     <div class="col-sm-4">
       <div style="text-align:center;">
         <img class="img-fluid" src="images/portrait.jpg" alt="Keyur Joshi">
-        <h1>Keyur Parag Joshi</h1>
+        <h1>Keyur Joshi</h1>
       </div>
       <hr>
       <a href="misc/resume.pdf"><h3>Resume</h3></a>
       <hr>
-      <h3>Address</h3>
-      Google Sunnyvale MP2, <br>
-      1175 Borregas Ave, <br>
-      Sunnyvale, CA 94089 USA
+      <h3>Mailing Address</h3>
+      1600 Amphitheatre Pkwy, <br>
+      Mountain View, CA 94043 USA
       <hr>
       <h3>Email</h3>
       <a href="mailto:keyurj@google.com">keyurj@google.com</a>
@@ -59,13 +58,13 @@
     </div>
     <div class="col-sm-8">
       <h1 id="aboutme">About Me</h1>
-      I am a Software Engineer (L4) at Google.
-      My work focuses on evaluating the accuracy of AI agents that perform complex tasks and use developer-defined functions and resources.
+      I am a Software Engineer at Google.
+      My work focuses on developing infrastructure and datasets for evaluating the accuracy of AI agents that perform complex tasks and use various tools and resources.
       <br><br>
-      I completed my PhD at the <a href="https://siebelschool.illinois.edu/">School of Computing and Data Science at the University of Illinois Urbana&#8209;Champaign</a> in May 2024.
+      I completed my PhD at the <a href="https://siebelschool.illinois.edu/">School of Computing and Data Science at the University of Illinois, Urbana&#8209;Champaign</a> in May 2024.
       My advisor was <a href="https://misailo.web.engr.illinois.edu/">Associate Professor Sasa Misailovic</a>.
-      I was previously a research intern at Microsoft Research India working with <a href="https://www.microsoft.com/en-us/research/people/rahsha/">Rahul Sharma</a>.
-      I graduated from the <a href="https://www.iith.ac.in/">Indian Institute of Technology Hyderabad</a> in 2017.
+      I was previously a Research Intern at Microsoft Research India, where I worked on fixed-point training of RNNs.
+      I graduated with honours from the <a href="https://cse.iith.ac.in/">Indian Institute of Technology, Hyderabad</a> in 2017.
       <hr>
       <h1 id="publications">Publications</h1>
       <h2>2025</h2>
