--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
       My advisor was <a href="https://misailo.web.engr.illinois.edu/">Associate Professor Sasa Misailovic</a>.
       I was previously a Research Intern at Microsoft Research India, where I worked on fixed-point training of RNNs.
       I graduated with honours from the <a href="https://cse.iith.ac.in/">Indian Institute of Technology, Hyderabad</a> in 2017.
+      <br><br>
+      Outside of work, I enjoy learning new things.
+      I regularly watch videos and read articles on a variety of subjects, including science, technology, history, and music.
+      I have also taught myself German (A2+) and I am learning Dutch.
       <hr>
       <h1 id="publications">Publications</h1>
       <h2>2025</h2>
