Add oss section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="#aboutme">About Me</a>
+        <a class="nav-link" href="#aboutMe">About Me</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#openSource">Open-Source</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#publications">Publications</a>
@@ -57,7 +60,7 @@
       <hr class="d-sm-none">
     </div>
     <div class="col-sm-8">
-      <h1 id="aboutme">About Me</h1>
+      <h1 id="aboutMe">About Me</h1>
       I am a Software Engineer at Google.
       My work focuses on developing infrastructure and datasets for evaluating the accuracy of AI agents that perform complex tasks and use various tools and resources.
       <br><br>
@@ -68,7 +71,15 @@
       <br><br>
       Outside of work, I enjoy learning new things.
       I regularly watch videos and read articles on a variety of subjects, including science, technology, history, and music.
-      I have also taught myself German (A2+) and I am learning Dutch.
+      I have also taught myself German (A2+) and I am learning French.
+      <hr>
+      <h1 id="openSource">Open-Source Contributions</h1>
+      <ul>
+      <li> <b>User Simulation in Google Agent Development Kit</b> <br>
+           Dynamic, model-driven user simulation for testing AI agents <br>
+           <i>Contributions: feature implementation, testing, user documentation, and editing of the announcement blog post</i> <br>
+           <a href="https://google.github.io/adk-docs/evaluate/user-sim/">Documentation</a> | <a href="https://developers.googleblog.com/en/announcing-user-simulation-in-adk-evaluation/">Blog Post</a>
+      </ul>
       <hr>
       <h1 id="publications">Publications</h1>
       <h2>2025</h2>
